--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Latihan Git 59</title>
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h1>Selamat Datang</h1>
+    <h2>di Web saya</h2>
   </body>
 </html>
